# Tanaka

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CONSOLE_SPEC.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PROGRESS.md  README.md  REPOSITORY_AUDIT.md  SPEC.md  THESIS.md  THREATS.md  build_installer.py  ledger.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  microvm-probe.yml  microvm.yml  sandbox.yml
brag-output/: brag-plan.md  composition-brief.md  share-copy.txt
brag-output/composition/: index.html
brag-output/composition/assets/: audio-data.js
brag-output/composition/assets/music/cues/: happy-beats-business-moves-vol-11-by-ende-dot-app.music-cues.json  happy-beats-business-moves-vol-11-by-ende-dot-app.music-cues.md
docs/: ARCHITECTURE.md  SPEC.md  THESIS.md  THREATS.md
docs/history/: CONSOLE_SPEC.md  PROGRESS.md  architecture-v0.1.md  implementation-brief.md
microvm/: Dockerfile.rootfs  init.sh  make_order.py
sentinel_slice/: __init__.py  apphome.py  gateway.py  init_app.py  inspector.py  installer.py  keygen.py  loop.py  mcp_gateway.py  run_slice.py  verify_ledger.py  verify_policy_history.py
sentinel_slice/app/: __init__.py  connect.py  firstrun.py  model.py  shell.py
sentinel_slice/attestor/: mock.py
sentinel_slice/authoring/: policy_form.py  policy_store.py
sentinel_slice/capabilities/: cap.docs.summarize.v1.json  cap.email.draft_reply.v1.json  cap.payment.initiate.v1.json
sentinel_slice/cashier/: engine.py  policy.py  store.py
sentinel_slice/chef/: appcontainer.py  chef_main.py  linux_sandbox.py  mac_sandbox.py  microvm_sandbox.py  runner.py  sandbox.py
sentinel_slice/console/: auth.py  server.py  service.py  signed_auth.py
sentinel_slice/console/static/: app.js  index.html
sentinel_slice/consumer/: __main__.py  approval.py  loop.py  native.py  permissions.py  preferences.py
sentinel_slice/curriculum/: drill.py
sentinel_slice/diner/: agent.py
sentinel_slice/keys/: cashier_ed25519_public.pem
sentinel_slice/kitchen/fixtures/mailbox/user.kenji/: poisoned.txt  report.txt  t-001.txt
sentinel_slice/ledger/: __init__.py  receipts.py
sentinel_slice/menu/: __init__.py  builder.py  catalog.py  templates.py
sentinel_slice/policies/: account_manager.json
sentinel_slice/spine/: __init__.py  canonical.py  hashing.py  types.py
sentinel_slice/tests/: test_app_connect.py  test_app_firstrun.py  test_app_install.py  test_app_model.py  test_app_shell.py  test_appcontainer.py  test_apphome.py  test_applevm_sandbox.py  test_at01_honest.py  test_at02_off_menu.py  test_at03_role.py  test_at04_scope.py  test_at05_replay.py  test_at06_tamper.py  test_at07_chef_no_network.py  test_at08_workspace_gone.py  test_at09_policy_roundtrip.py  test_at10_standalone_verifier.py  test_canonical_json.py  test_capabilities.py  test_capability_metadata.py  test_cashier_import_closure.py  test_chef_forged_sig.py  test_console_http.py  test_console_menu.py  test_console_service.py  test_console_static.py  test_consumer_approval.py  test_containment_receipt.py  test_drill.py  test_evaluate_order.py  test_fix_error_handling.py  test_fix_execution_receipt.py  test_fix_scope_traversal.py  test_gateway.py  test_honest_endtoend.py  test_init_app.py  test_injected_probe.py  test_inspector.py  test_installer.py  (+20 more)
sentinel_slice/window/: serving.py
