[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-slice"
version = "0.1.0"
description = "Sentinel Loop — governance vertical slice (six takeout layers, verifiable receipts)"
requires-python = ">=3.11"
# Deps are deliberately limited to cryptography + pytest per CLAUDE.md non-negotiable #6.
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sentinel-keygen = "sentinel_slice.keygen:cli"
sentinel-run = "sentinel_slice.run_slice:cli"
sentinel-verify = "sentinel_slice.verify_ledger:cli"
sentinel-gateway = "sentinel_slice.gateway:cli"
sentinel-policy-form = "sentinel_slice.authoring.policy_form:main"

[tool.setuptools.packages.find]
include = ["sentinel_slice*"]

[tool.setuptools.package-data]
# The engine's data files: menu, policies, the committed PUBLIC key, and the
# cooperative kitchen fixtures. The private key is never packaged.
sentinel_slice = [
    "capabilities/*.json",
    "policies/*.json",
    "keys/*_public.pem",
    "kitchen/fixtures/mailbox/**/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["sentinel_slice/tests"]
python_files = ["test_*.py"]
# Acceptance tests are named after their SPEC number: test_at01_*, test_at02_*, ...
python_functions = ["test_*"]
