[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-slice"
version = "0.15.0"
description = "A prototype for checking agent actions before they run and recording signed receipts"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yasir Qureshi" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Keep the runtime dependency surface small. Test tools belong in the dev extra.
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sentinel-app = "sentinel_slice.app.shell:cli"
sentinel-init = "sentinel_slice.init_app:cli"
sentinel-sandbox-setup = "sentinel_slice.chef.appcontainer:cli"
sentinel-keygen = "sentinel_slice.keygen:cli"
sentinel-run = "sentinel_slice.run_slice:cli"
sentinel-verify = "sentinel_slice.verify_ledger:cli"
sentinel-verify-policy = "sentinel_slice.verify_policy_history:cli"
sentinel-gateway = "sentinel_slice.gateway:cli"
sentinel-inspect = "sentinel_slice.inspector:cli"
sentinel-drill = "sentinel_slice.curriculum.drill:cli"
sentinel-console = "sentinel_slice.console.server:cli"
sentinel-mcp = "sentinel_slice.mcp_gateway:cli"
sentinel-policy-form = "sentinel_slice.authoring.policy_form:main"

[project.gui-scripts]
# Windowed launcher for the Start Menu shortcut: no console window flashes
# when a non-technical user opens the app (pythonw on Windows).
sentinel-loop = "sentinel_slice.app.shell:cli"

[tool.setuptools.packages.find]
include = ["sentinel_slice*"]

[tool.setuptools.package-data]
# The engine's data files: menu, policies, the committed PUBLIC key, and the
# cooperative kitchen fixtures. The private key is never packaged.
sentinel_slice = [
    "capabilities/*.json",
    "policies/*.json",
    "keys/*_public.pem",
    "kitchen/fixtures/mailbox/**/*.txt",
    "console/static/*",
]

[tool.pytest.ini_options]
testpaths = ["sentinel_slice/tests"]
python_files = ["test_*.py"]
# Acceptance tests are named after their SPEC number: test_at01_*, test_at02_*, ...
python_functions = ["test_*"]
